modified the html and css more

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     
     <main>
+
         <section id="home">
-            <h2>Welcome to Phone Guardian</h2>
             <p>Phone Guardian is a comprehensive phone validation service designed to verify phone numbers accurately.</p>
-            </section>
+        </section>
 
         <section id="validate">
             <h2>Validate Phone Number</h2>
@@ -34,11 +34,24 @@
             <h2>How to Use Phone Guardian</h2>
             <p>Phone Guardian is a simple tool for validating phone numbers. Follow these steps to use the app:</p>
             <ul>
-                <li>Enter the phone number you want to validate in the input field provided(e.g +25412345678)
-                    <li>Click on the "Validate" button.</li>
+                <li>Enter the phone number you want to validate in the input field provided(E164 format)
+                <li>Click on the "Validate" button.</li>
                 <li>Wait for the validation result to appear below the input field.</li>
                 <li>The validation result will indicate whether the phone number is valid or not.</li>
+            </ul>
         </section>
+
+        <section id="coming-soon">
+            <h2>Coming Soon: Bulk Phone Number Validator !!!</h2>
+            <p>Our upcoming Bulk Phone Number Validator feature is designed to streamline the process of validating large sets of phone numbers effortlessly. Stay tuned for the launch!</p>
+            <p>Enter your email address below to receive updates about the launch:</p>
+            <form id="notifyForm">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <button type="submit">Notify Me</button>
+            </form>
+        </section>
+        
     </main>
 
     <footer>
