few changes on catlove

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section id="image">
       <h2>Cat Gallery</h2>
-      <img id="catImage" src="" alt="">
+      <canvas id="catCanvas" width="400" height="300"></canvas>
     </section>
     <section class="card" id="facts">
       <h2>Random Cat Facts</h2>
