--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </header>
   <main>
     <section id="history">
+      <h2>Cat History</h2>
       <p>Loading...</p>
     </section>
     <section id="image">
